# pdf-comparo

./: .gitignore  README.md  comparator.py  compare.py  compare_forms.py  compare_forms_embeddings.py  embeddings.py  ingest.py  pdf_extraction.py  pyproject.toml  requirements.txt  setup.sh  vector_store.py
