[project]
name = "pdf-comparo"
version = "0.1.0"
description = "Compare PDF forms using semantic embeddings and logo matching"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyPDF2>=3.0.0",
    "pymupdf>=1.23.0",
    "Pillow>=9.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pdf-comparo = "compare_forms_embeddings:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

